--- a/package.json
+++ b/package.json
@@ -8,39 +8,39 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "aurelia-bootstrapper": "^2.3.2",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^10.17.18",
     "aurelia-animator-css": "^1.0.4",
-    "aurelia-cli": "^1.0.2",
+    "aurelia-bootstrapper": "^2.3.2",
+    "aurelia-cli": "^1.3.0",
+    "aurelia-loader-nodejs": "^1.1.0",
+    "aurelia-pal-nodejs": "^1.2.0",
     "aurelia-testing": "^1.0.0",
     "aurelia-tools": "^2.0.0",
-    "gulp": "^4.0.0",
-    "minimatch": "^3.0.4",
-    "through2": "^3.0.0",
-    "vinyl-fs": "^3.0.3",
-    "promise-polyfill": "^8.1.0",
-    "del": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "requirejs": "^2.3.6",
-    "text": "requirejs/text#latest",
-    "gulp-typescript": "^5.0.0",
-    "gulp-tslint": "^8.1.4",
-    "tslint": "^5.13.0",
-    "typescript": "^3.1.2",
-    "@types/node": "^10.11.6",
     "browser-sync": "^2.26.3",
     "connect-history-api-fallback": "^1.6.0",
     "debounce": "^1.2.0",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
+    "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
-    "gulp-notify": "^3.2.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-tslint": "^8.1.4",
+    "gulp-typescript": "^5.0.0",
     "gulp-watch": "^5.0.1",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-transform-stub": "^2.0.0",
-    "aurelia-loader-nodejs": "^1.0.1",
-    "aurelia-pal-nodejs": "^1.2.0",
+    "minimatch": "^3.0.4",
+    "promise-polyfill": "^8.1.0",
+    "requirejs": "^2.3.6",
+    "text": "github:requirejs/text#latest",
+    "through2": "^3.0.0",
     "ts-jest": "^24.0.0",
-    "@types/jest": "^24.0.9"
+    "tslint": "^5.13.0",
+    "typescript": "^3.8.3",
+    "vinyl-fs": "^3.0.3"
   },
   "scripts": {
     "build": "au build-plugin",
